Updated to 26.2 - waiting for ClothConfig API update